# msgbuf

./: .gitignore  Cargo.toml  README.md  fake-tail.py  msgbuf.py  setup.cfg
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: main.yml
example/: tg.py
msgbuf/: cli.py
src/: main.rs
test/: .gitignore  expected.txt  fake-notifier.py  fake-notifier.sh  fake-tail.sh  main.sh
