[metadata]
name = msgbuf
url = https://github.com/dmotte/msgbuf
author = dmotte
license = MIT

description = A Python message buffer
long_description =
    [![PyPI](https://img.shields.io/pypi/v/msgbuf?logo=python&style=flat-square)](https://pypi.org/project/msgbuf/)

    A Python **message buffer**.

    Please refer to the [GitHub repository](https://github.com/dmotte/msgbuf) for more information.
long_description_content_type = text/markdown

keywords = notifications cli telegram log text buffer notifier logs msg send message notification notify buf message-buffer msgbuf msg-buf
classifiers =
    Intended Audience :: System Administrators
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Terminals
    Topic :: Utilities

# This version number will be replaced with the current git tag by the
# release.yml workflow
version = 0

[options]
install_requires =
python_requires = >=3.9.1
packages = msgbuf

[options.entry_points]
console_scripts =
    msgbuf = msgbuf.cli:main
